src/mosaic.css
/************************/
/***     TILES     ***/
/************************/

body {
    font-family: arial, verdana, sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    font-family: arial, verdana, sans-serif;
}

.mosaic-description {
    width: 150px;
    float: left;
    color: #666666;
    font-size: 22px;
    margin-bottom: 50px;
}

.mosaic-label {
    color: #666666;
    font-size: 22px;
}

.mosaic-textinput {
    background-color: #ffffff;
    border: 1px solid #cfcfcf;
    border-radius: 2px;
    box-shadow: inset 0 3px 0 #dfdfdf;
    box-sizing: border-box;
    color: #222222;
    font-family: arial, verdana, sans-serif;
    display: block;
    margin: 10px;
    padding: 10px;
}

.mosaic-button {
    background-color: #dedbc8;
    border: none;
    border-radius: 2px;
    border-bottom: 5px solid #dedbc8;
    box-sizing: border-box;
    color: rgba(0, 0, 0, 0.97);
    cursor: pointer;
    font-family: arial, verdana, sans-serif;
    font-size: 18px;
    font-weight: bold;
    display: block;
    margin: 10px;
    padding: 10px;
}

.mosaic-button:hover {
    background-color: #398033;
    border-bottom: 5px solid #74a770;
}

.mosaic-button:active {
    border-bottom: none;
    margin-top: 15px;
}

.mosaic-button[disabled=true]{
    border: 1px solid #999999;
    background-color: #cccccc;
    color: #666666;
}

.mosaic-program {
    font-family: monospace, courier, serif;
    font-size: 20px;
    width: 400px;
    height: 200px;
}

.mosaic-goal {
    font-family: monospace, courier, serif;
    font-size: 20px;
    width: 400px;
}

.mosaic-result {
    background-color: #fafafa;
    margin: 10px;
    padding: 10px;
}

.mosaic-result > div {
    background-color: #efefef;
    border-radius: 3px;
    margin: 10px;
    padding: 10px;
}

.mosaic-credit {
    color: #b4b4b4;
    font-size: 12px;
}

.mosaic-secondary {
    width: 150px;
    float: right;
    font-size: 10px;
}

.mosaic-player-1 {
    background-color: #dedbc8;
}

.mosaic-current {
    font-weight: bold;
}

.mosaic-winning {
    background-color: #dedbc8;
}

body {
    display: grid;
    grid-template-areas:
        "game game game game"
        "status1 waiting score status2"
        "console console console console";
    grid-template-columns: 1fr 1fr 1fr 1fr;
}

game {
    grid-area: game;
    justify-self: center;
}

status1 {
    grid-area: status1;
}

waiting {
    grid-area: waiting;
}
score {
    grid-area: score;
}

status2 {
    grid-area: status2;
}

console {
    grid-area: console;
}

.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 40px;
    height: 40px;
    animation: spin 2s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

